--- a/layout/base.j2
+++ b/layout/base.j2
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
-        <title>Hyde Starter Kit {{ resource.meta.title_ending }}</title>
+        <title>Yo.{{ resource.meta.title_ending }}</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="{{ media_url('css/style.css') }}">
+        <link rel="stylesheet" href="{{ media_url('css/reset.css') }}">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
