--- a/layout/macros.j2
+++ b/layout/macros.j2
@@ -6,7 +6,7 @@
 #}
 <ul>
 {% for menu_item in menu -%}
-    <li><a {% if (menu_item.url == resource.url) or
+    <li><a {% if (menu_item.url == resource.meta.title) or
                  (menu_item.title == "Advanced topics"
                   and resource.node.name == "advanced")
             %}class="selected"{% endif -%}
