--- a/site/layout/macros.j2
+++ b/site/layout/macros.j2
@@ -1,3 +1,7 @@
+{% macro render_date() %}
+<h3>DATE GOES HERE</h3>
+{% endmacro %}
+
 {% macro render_main_menu() -%}
 
 {# Set menu item selected if the current resource matches the item in the
