--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -1,17 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html>
     <head>
-        <link href="http://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
         <title>{{ this_site.title }}{{ resource.meta.title_ending }}</title>
         <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+                
         <link rel="stylesheet" href="{{ media_url('css/reset.css') }}">
         <link rel="stylesheet" href="{{ media_url('css/style.css') }}">
+
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
         <![endif]-->
     </head>
-    <body>
+    <body lang="en">
         <header>
             <h1><a href="/">{{ this_site.title }}</a><h1>
         </header>
