--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -271,9 +271,9 @@ h1, h2, h3, strong, code {
     color: @aside;
 }
 
-    #follow p, #colophon h3 {
-        color: @background;
-    }
+#follow p, #colophon h3 {
+    color: @background;
+}
 
 a {
     text-decoration: none;
@@ -297,12 +297,13 @@ a:active {
     border-bottom-color: @background;
     color: @background;
 }
-
+/*
 ::selection         {background: @red; color: @emphasis;}
 ::-moz-selection    {background: @red; color: @emphasis;}
 img::selection      {background: transparent;}
 img::-moz-selection {background: transparent;}
 body {-webkit-tap-highlight-color: @red;}
+*/
 
 
 /*
