--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -8,6 +8,11 @@
                 
         <link rel="stylesheet" href="{{ media_url('css/GGS.css') }}">
 
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script src="{{media_url('js/jquery.timeago.js')}}" type="text/javascript"></script>
+        <script src="{{media_url('js/site.js')}}" type="text/javascript"></script>
+        <script type="text/javascript" src="//use.typekit.net/emq4jse.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
         <script src="{{ media_url('js/GGS.js') }}"></script>
 
@@ -18,14 +23,21 @@
     </head>
     <body lang="en">
         <header>
-            <div class="wrapper">
+            <div>
             {% block splash %}{% endblock %} 
             <h1><a href="/">{{ this_site.title }}</a><h1>
             </div>
             <nav>
-                <div class="wrapper">
                 {% import "macros.j2" as macros with context %}
-                {{ macros.render_main_menu() }}
+                {{ macros.srender_main_menu() }}
+                <div class="wrapper">
+                    one
+                </div>
+                <div class="wrapper">
+                    two
+                </div>
+                <div class="wrapper">
+                    three
                 </div>
             </nav>
         </header>
