--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -357,8 +357,8 @@ h3 {
 *  Note: box-sizing will not work in IE6-7
 */
 
-.wrapper {
-	padding: 0 (@line/2)/@em;
+header, footer, .wrapper {
+	//padding: 0 (@line/2)/@em;
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
 			box-sizing: border-box;
