--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -155,6 +155,8 @@ figure img, figure object, figure embed, figure video {
 	display: block;
 }
 img {
+	max-width: 100%; 
+	display: block;
 	border: 0; 
 	-ms-interpolation-mode: bicubic;
 }
