--- a/site/layout/listing.j2
+++ b/site/layout/listing.j2
@@ -1,13 +1,6 @@
 {% extends "base.j2" %}
 
-{% block content %}
-
-{% for res in resource.node.walk_resources() %}
-    {% if not res.meta.exclude %}
-    [{{ res.slug|capitalize }}]({{ res.full_url }})
-    {% refer to res.relative_path as post %} 
-    {{ post.content }}
-    {% endif %}
-{% endfor %}
-
+{% block menu %}
+    {% import "macros.j2" as macros with context %}
+    {{ macros.render_main_menu() }}
 {% endblock %}
