--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -85,6 +85,10 @@ footer, header, hgroup, nav, section, audio, canvas, video {
 }
 .listing {
     margin:0 0 25/@em 0;
+    img {
+        max-width: 100%;
+        padding: .5em 0 .5em;
+    }
 }
 
 sub, sup {
@@ -230,6 +234,14 @@ pre, code {
 
 header {
     h1 {
+        text-align: center;
+        &.splash {
+            padding-bottom: .5em;
+            margin-bottom: .5em;
+            a {
+                color: black;
+            }
+        }
         a {
             color: @red;
         }
