--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -234,7 +234,6 @@ pre, code {
 
 header {
     h1 {
-        text-align: center;
         &.splash {
             padding-bottom: .5em;
             margin-bottom: .5em;
@@ -286,7 +285,7 @@ h3 {
 
 
 .datetime {
-    margin: 0;
+    margin: 0 0 1em 0;
     font-style: italic;
 }
 
@@ -471,6 +470,9 @@ header, footer, .wrapper {
 		float: left;
 		width: 6 * @column;
 	}
+    .listing > section, .posts > article, .post > section {
+        width: 70%;
+    }
 	
 }
 
