--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -24,7 +24,7 @@
     <body lang="en">
         <header>
             <div>
-                <h1><a href="/">{{ this_site.title }}</a><h1>
+                <h1><a href="/">{{ this_site.title }}</a></h1>
                 {% block splash %}{% endblock %} 
             </div>
             <nav>
