--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -82,7 +82,7 @@ footer, header, hgroup, nav, section, audio, canvas, video {
 .listing {
     margin:0 0 25/@em 0;
     img {
-        padding: .5em 0 .5em;
+        margin: .5em 0 .5em;
     }
 }
 
@@ -221,7 +221,7 @@ body {
 */
 
 body, input, textarea, button, select {
-    font-family: 'MuseoSlab500', arial, sans-serif;
+    font-family: arial, sans-serif;
 }
 
 pre, code {
