keeping up with the jones

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -343,6 +343,13 @@ a:active {
     color: @red;
 }
 
+a.selected {
+    color: black; 
+    a:hover {
+        color: @red;
+    }
+}
+
 #colophon a:active {
     border-bottom-color: @background;
     color: @background;
