--- a/site/layout/listing.j2
+++ b/site/layout/listing.j2
@@ -1,6 +1,8 @@
 {% extends "base.j2" %}
 
 {% block menu %}
+    <nav>
     {% import "macros.j2" as macros with context %}
     {{ macros.render_main_menu() }}
+    </nav>
 {% endblock %}
