--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -372,7 +372,7 @@ body {-webkit-tap-highlight-color: @red;}
  *
  */
 
-.post header {
+.listing header, .post header {
     margin: 0;
 }
 
@@ -496,7 +496,7 @@ header, footer, .wrapper {
     }
     
     /// Overall text width
-    .listing > section, .posts > article, .post > section {
+    .listing > article, .posts > article, .post > article, article.post {
         width: 70%;
     }
 	
