--- a/site/layout/post.j2
+++ b/site/layout/post.j2
@@ -1,7 +1,9 @@
 {% extends "base.j2" %}
 
 {% block menu %}
+    <nav>
     {{ macros.render_main_menu() }}
+    </nav>
 {% endblock %}
 
 {% block content %}
