--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -405,6 +405,11 @@ h3 {
 	margin: (16/@em) 0 (16/@em);
 }
 
+
+pre {
+    margin-bottom: 1em;
+}
+
 /*
 *  Simple elastic gutters
 *  Note: box-sizing will not work in IE6-7
