--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -5,6 +5,11 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+        <meta name="keywords" content="{{ resource.meta.keywords|e }}">
+        <meta name="author" content="{{ resource.meta.author|e }}">
+
+
                 
         <link rel="stylesheet" href="{{ media_url('css/GGS.css') }}">
 
