--- a/site/layout/post.j2
+++ b/site/layout/post.j2
@@ -22,5 +22,7 @@
         {%- endmark %}
     </section>
  </article>
+{% if site.config.mode == "development" %}
 {% include media_url('js/disqus.js') %}
+{% endif %}
 {% endblock %}
