why did so many things change at once? I remember not.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -587,6 +587,7 @@ header, footer, .wrapper {
 */
 
 /* @media screen and (min-width: 1872px) */
+/*
 @media screen and (min-width: 117em) {
 
 	header, footer, #twoway {
@@ -607,14 +608,16 @@ header, footer, .wrapper {
 	}
 	
 }
-
+*/
 
 /* @media screen and (min-width: 2080px) */
+/*
 @media screen and (min-width: 130em) {
 
 	body {
-		/* Zoom baseline grid to 18/16 = 1.125 */
+		Zoom baseline grid to 18/16 = 1.125 
 		font-size: (@font-size + 2) / @em;
 		max-width: 2560/@em;
 	}
 }
+*/
