--- a/site/layout/assets/render_summary.j2
+++ b/site/layout/assets/render_summary.j2
@@ -1,3 +1,3 @@
 {% if res.meta.summary %}
-    <p class="summary">{{ res.meta.summary }}</p>
+    <p class="summary">{{ res.meta.summary|markdown|typogrify }}</p>
 {% endif %}
