--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -231,7 +231,9 @@ pre, code {
 header {
     h1 {
         &.splash {
+            font-size: 1.5em;
             margin-bottom: .5em;
+            line-height: 1.5em; 
             a {
                 color: black;
             }
@@ -292,6 +294,10 @@ h3 {
 
 .summary {
     margin-top: .5em;
+}
+
+.footnote {
+    float: footnote;
 }
 
 ul {
