--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -153,7 +153,7 @@ table {
 figure {
 	position: relative;
 }
-figure img, figure object, figure embed, figure video {
+figure img, figure figcaption, figure object, figure embed, figure video {
 	max-width: 100%; 
 	display: block;
 }
@@ -220,6 +220,9 @@ body {
 *
 */
 
+figcaption {
+    font-size: .7em;
+}
 body, input, textarea, button, select {
     font-family: arial, sans-serif;
 }
