--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -393,7 +393,7 @@ body {-webkit-tap-highlight-color: @red;}
  *
  */
 
-.listing header, .post header {
+.listing header, {
     margin: 0;
 }
 
@@ -537,6 +537,10 @@ header, footer, .wrapper {
 		/* Zoom baseline grid to 17/16 = 1.0625 */
 		font-size: (@font-size + 1) / @em;
 	}
+
+    article header {
+        margin: 0 0 .5em 0;
+    }
 }
 
 
