--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -410,6 +410,10 @@ header, footer, #twoway {
 	margin: 0 @column;
 }
 
+article header {
+    margin: 0;
+}
+
 h1, h2 {
 	margin: (24/26*1em)/@em 0 (36/26*1em)/@em;
 }
