--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -244,9 +244,11 @@ header {
             font-size: 1.5em;
             margin-bottom: .5em;
             line-height: 1.5em; 
+            /*
             a {
                 color: black;
             }
+            */
         }
         a {
             color: @red;
