--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="{{ media_url('css/GGS.css') }}">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.min.js"></script>
         <script src="{{media_url('js/jquery.timeago.js')}}" type="text/javascript"></script>
         <script src="{{media_url('js/site.js')}}" type="text/javascript"></script>
         <script type="text/javascript" src="//use.typekit.net/emq4jse.js"></script>
