--- a/site/layout/assets/render_related_posts.j2
+++ b/site/layout/assets/render_related_posts.j2
@@ -1,9 +1,11 @@
+{% if resource.meta.tags %}
 <section class="tags">
+{{ resource.meta.tags.length }}
 {% filter markdown|typogrify -%}
-{% for res in site.content.walk_resources_tagged_with(resource.meta.tags.0) %}
-{%- if loop.first %}
+{% if loop.first and not loop.last %}
 ####Related posts: 
-{% endif -%}
+{% endif %}
+{% for res in site.content.walk_resources_tagged_with(resource.meta.tags.0) %}
 {% if resource.full_url != res.full_url %}
 - [{{ res.meta.title }}]({{ res.full_url }})
 {% endif %}
@@ -11,3 +13,4 @@
 {%- endfor -%}
 {%- endfilter %}
 </section>
+{% endif %}
