Ah, that's better.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -152,6 +152,7 @@ table {
 
 figure {
 	position: relative;
+    margin: 1.5em 0 1.5em 0;
 }
 figure img, figure figcaption, figure object, figure embed, figure video {
 	max-width: 100%; 
@@ -221,6 +222,7 @@ body {
 	font-size: 110 / @em;
 	line-height: (@line*5) / 110 * 1em;
 }
+
 /*
 *
 *   Typography
@@ -237,6 +239,12 @@ body, input, textarea, button, select {
 pre, code {
     font-family: Menlo, Monaco, monospace;
 }
+
+/*
+ *
+ * Header 
+ *
+ */
 
 header {
     h1 {
