--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -12,6 +12,7 @@
 
                 
         <link rel="stylesheet" href="{{ media_url('css/GGS.css') }}">
+        <link href="feed.xml" type="application/atom+xml" rel="alternate" title="Sam Jacoby | Explorer | Feed">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
          <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.min.js"></script>
