--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -347,12 +347,9 @@ h1, h2, h3, strong, code {
 }
 
 #colophon {
-    color: @aside;
+    color: @body;
 }
 
-#follow p, #colophon h3 {
-    color: @background;
-}
 
 a {
     text-decoration: none;
@@ -422,6 +419,12 @@ header, footer, #twoway {
 
 article header {
     margin: 0;
+}
+
+footer {
+   width: 100%; 
+   float: left;
+
 }
 
 h1, h2 {
