--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -7,7 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
         <meta name="keywords" content="{{ resource.meta.keywords|e }}">
-        <meta name="author" content="{{ resource.meta.author|e }}">
+        {% if resource.meta.description %}
+        <meta name="description" content="{{ resource.meta.description|e }}">
+        {% endif %}
+        <meta name="author" content="{{ author.name|e }}">
+        <meta name="email" content="{{ author.email|e }}">
 
 
                 
