--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -269,7 +269,14 @@ header {
 
 article {
     margin-bottom: 24/@em;
+
+    
+    footer {
+        padding: 0;
+        margin: 0;
+    }
 }
+
 
 article p, #content figure, #content header p {
     margin-bottom: 8/@em;
