Tweak related posts.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -138,7 +138,6 @@ table {
     border-spacing: 0;
 }
 
-
 #colophon {
     clear: both;
     padding: 24/@em 0 0;
@@ -274,6 +273,9 @@ article {
     footer {
         padding: 0;
         margin: 0;
+        .tags {
+            margin: 1em 0;
+        }
     }
 }
 
@@ -325,6 +327,8 @@ h3 {
 
 .footnote {
     float: footnote;
+    .small;
+    
 }
 
 ul {
