--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -587,6 +587,9 @@ header, footer, .wrapper {
 	header, footer, #twoway{
 		margin: 0 @column*3;
 	}
+    #monotype {
+        margin: 0 3.5% 19% 7%; 
+    }
 
 }
 
@@ -613,6 +616,10 @@ header, footer, .wrapper {
 	header, footer, #twoway {
 		margin: 0 @column*5;
 	}
+
+    #monotype {
+        margin: 0 3.5% 19% 19%;
+    }
 	
 }
 
