--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="{{ media_url('css/GGS.css') }}">
         <link href="feed.xml" type="application/atom+xml" rel="alternate" title="Sam Jacoby | Explorer | Feed">
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
          <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.min.js"></script>
         <script src="{{media_url('js/jquery.timeago.js')}}" type="text/javascript"></script>
         <script src="{{media_url('js/site.js')}}" type="text/javascript"></script>
@@ -28,6 +28,8 @@
         {% if site.config.mode=='development'%}
         <script src="{{ media_url('js/GGS.js') }}"></script>
         {% endif %}
+        {% block scripts %}
+        {% endblock %}
 
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
@@ -48,7 +50,6 @@
         </article>
         <footer id="colophon">
             <div class="inner">
-                <h3>{{ author.email}}</h3>
             </div>
         </footer>
 
