Tweaking footnotes and a few other things.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -252,13 +252,16 @@ blockquote {
             color: gray;
             font-style: italic;
         }
-        
+        .link {
+            color: blue;
+            text-decoration: underline;
+        }
 
     }
     pre {
         font-size: small; 
         ins {
-            color: blue;
+            color: darkgreen;
         }
         del {
             color: red;
