--- a/site/layout/assets/render_gittracker.j2
+++ b/site/layout/assets/render_gittracker.j2
@@ -2,7 +2,7 @@
 <h3>Change History</h3>
 <section id="commit-log">
 {% for c in resource.meta.commits %}
-<h4><time class="timeago" datetime="{{ c.date }}">{{ c.date }}</time>: <span class="message"> {{ c.msg | escape }}</span> <span class="link">&raquo;</span> </h4> 
+<h4><time class="timeago" datetime="{{ c.date }}">{{ c.date }}</time>: <span class="message"> {{ c.msg | escape }}</span> <a class="link" href="#{{ c.hash }}" id="{{ c.hash }}">&raquo;</a> </h4> 
 <div class="changeset">
     <pre class="hash">Find <a href="https://github.com/samjacoby/samjacoby.com/commit/{{ c.hash }}">{{ c.hash }}</a> on GitHub.</pre>
     <pre class="message">{{ c.msg | escape }}</pre>
