--- a/site/layout/post.j2
+++ b/site/layout/post.j2
@@ -21,7 +21,7 @@
 {% mark post -%}
 <article class="post">
     <header>
-        <h2>{{ resource.meta.title }}</h2> 
+        <h2 class="title">{{ resource.meta.title }}</h2> 
         {% if resource.meta.date %}
         <p class="datetime">{{ macros.render_date( resource.meta.date ) }}</p>
         {% endif %}
