Just some tweaks. Adding (?) to tracking.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -277,6 +277,13 @@ blockquote {
     }
 }
 
+.sup {
+    padding-left: .2em;
+    line-height: 1em;
+    font-size: smaller;
+    vertical-align: super;
+}
+
 /*
  *
  * Header 
