--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -636,6 +636,10 @@ header, footer, .wrapper {
 		/* Reset baseline grid to 16/16 = 1.0 */
 		font-size: (@font-size) / @em; 
 	}
+
+    header {
+        width: 45%;
+    }
 	
 	header, footer, #twoway{
 		margin: 0 @column*2;
@@ -665,6 +669,10 @@ header, footer, .wrapper {
 		/* Reset baseline grid to 16/16 = 1.0 */
 		font-size: (@font-size) / @em;
 	}
+
+    header {
+       width: 48%; 
+    }
 	
 	header, footer, #twoway {
 		margin: 0 @column*3;
@@ -684,6 +692,10 @@ header, footer, .wrapper {
 		/* Zoom baseline grid to 17/16 = 1.0625 */
 		font-size: (@font-size + 1) / @em;
 	}
+
+    header {
+       width: 38%; 
+    }
 	
 }
 
