Adding right-hand switch nonsense and whatever else is in staging.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -284,6 +284,10 @@ blockquote {
     vertical-align: super;
 }
 
+.desc {
+    padding-right: 50%;
+}
+
 /*
  *
  * Header 
@@ -607,8 +611,14 @@ header, footer, .wrapper {
            margin-right: 1em;
        }
     }
+
+    //// Listing page width
+    .listing {
+        width: 100%;
+        
+    }
     
-    /// Overall text width
+    //// Overall text width
     .listing > article, .posts > article, .post > article, article.post {
         width: 70%;
     }
@@ -650,7 +660,7 @@ header, footer, .wrapper {
 		margin: 0 @column*2;
 	}
     #monotype {
-        margin: 0 3.5% 19% 7%; 
+        margin: 0 3.5% 19% 6.5%; 
     }
 
 }
@@ -684,7 +694,7 @@ header, footer, .wrapper {
 	}
 
     #monotype {
-        margin: 0 3.5% 19% 19%;
+        margin: 0 3.5% 19% 6.5%;
     }
 	
 }
