Fixed width issues.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -614,7 +614,7 @@ header, footer, .wrapper {
 
     //// Listing page width
     .listing {
-        width: 100%;
+        //width: 100%;
         
     }
     
